--- a/blur/build.gradle
+++ b/blur/build.gradle
@@ -17,7 +17,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'com.android.model.library'
+apply plugin: 'com.android.library'
 
 model {
     android {
